2008-08-28  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/application.cc:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/notebook_data.cc:
	Correctly unset the menu item when layout toolbar is shown and don't hide
	layout toolbar when an item is dragged
	* glom/mode_design/print_layouts/window_print_layout_edit.cc: 
	(on_canvas_drag_drop, on_canvas_drag_motion)
	Fixed build error with gtkmm 2.12 (const_cast, see comment)

2008-08-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc offer_field_list(), offer_field_formatting(),
	offer_imageobject(), offer_notebook(): Return the initial item if the user 
	cancelled the dialog.

2008-08-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/print_layout_toolbar_button.cc:
	* glom/mode_design/print_layouts/print_layout_toolbar_button.h: Added 
	get_item_type_from_selection_data().
	* glom/mode_design/print_layouts/window_print_layout_edit.cc: create_empty_item():
	Mention unhandled items on std::cerr.
	on_toolbar_item_drag_data_get(): Get the item type correctly. 
	* glom/mode_design/print_layouts/canvas_layout_item.cc: set_layout_item(): Do 
	not reference an empty layout item.

2008-08-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/action_layout_item.cc:
	* glom/mode_design/print_layouts/action_layout_item.h: Removed this.
	* glom/mode_design/print_layouts/Makefile.am:
	* glom/mode_design/print_layouts/print_layout_toolbar.cc:
	* glom/mode_design/print_layouts/print_layout_toolbar.h:
	* glom/mode_design/print_layouts/print_layout_toolbar_button.cc:
	* glom/mode_design/print_layouts/print_layout_toolbar_button.h:
	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h: Use a toolbar like 
	the details layout toolbar, which use EggToolPallette.
	* glom/utility_widgets/layouttoolbar.cc:
	* glom/utility_widgets/layouttoolbarbutton.cc: